# vietnamese-labor-law-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  coverage.json  handover.md  pyproject.toml
docs/: pre_week6_ai_assisted_review_report.md  pre_week6_gap_closure.md  pre_week6_human_review_instructions.md  pre_week6_independent_review_report.md  pre_week6_readiness.md  week10_artifact_reconciliation_review.md  week10_citation_guardrail.md  week11.md  week1_ingestion.md  week1_manual_validation.csv  week1_manual_validation_guide.md  week2_dense_rag.md  week3_manual_review_guide.md  week4_hybrid_retrieval.md  week5_reranker.md  week6_completion_report.md  week6_retrieval_engine.md  week7_mcp_legal_retrieval.md  week8_legal_rule_matrix.md  week8_mcp_legal_calculator.md  week9_langgraph_agent.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
scripts/: apply_week3_manual_review.py  build_week3_evaluation_dataset.py  build_week5_official_reports.py  check_llm.py  create_week2_smoke_dataset.py  demo_week2_rag.py  demo_week7_mcp_client.py  demo_week8_mcp_calculator_client.py  demo_week9_agent.py  diagnose_guardrail_semantic_scorer.py  diagnose_structured_router.py  finalize_eval_review_chunk_ids.py  generate_coverage_reports.py  generate_pre_week6_independent_review_report.py  generate_pre_week6_readiness.py  generate_pre_week6_review_application_report.py  index_bm25s.py  index_dense.py  inspect_docx.py  merge_week3_manual_reviews.py  prepare_pre_week6_human_review_packets.py  prepare_week3_rereview.py  query_dense.py  record_week10_artifact_reconciliation.py  refresh_week3_machine_prereview.py  render_week4_retrieval_reports.py  (+24 more)
(+389 files in other folders)
