[project]
name = "vietnamese-labor-law-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mrhao165-del", email = "mr.hao165@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "bm25s>=0.3.9",
    "fastapi>=0.139.0",
    "flagembedding>=1.4.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1,<2",
    "openai>=2.45.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "python-dateutil>=2.9.0.post0,<3",
    "python-docx>=1.2.0",
    "qdrant-client>=1.18.0",
    "structlog>=26.1.0",
    "torch>=2.13.0",
    "transformers>=4.44,<5",
    "underthesea>=9.5.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "data",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = [
    "src",
    "scripts",
    "tests",
]
exclude = [
    ".venv",
    "data",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that parse the real DOCX source when it is available",
]

[tool.coverage.run]
source = ["src/vietnamese_labor_law_assistant"]

[tool.coverage.report]
fail_under = 82
show_missing = true
skip_covered = false
